confs/middleware_basic_auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: dashboard-auth
    namespace: traefik
spec:
    basicAuth:
        secret: authsecret
